23/01/31 쿼리문 수정